--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
   </li>
 </ul>
 
+<app-search-restoration></app-search-restoration>
 <app-google-maps></app-google-maps>
 
 <router-outlet></router-outlet>
