--- a/src/app/modules/google/google-maps/google-maps.component.html
+++ b/src/app/modules/google/google-maps/google-maps.component.html
@@ -1,3 +1,3 @@
-<agm-map [latitude]="latitude" [longitude]="longitude">
-  <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+<agm-map [latitude]="userMarker.latitude" [longitude]="userMarker.longitude">
+  <agm-marker *ngIf="userMarker.display === true" [latitude]="userMarker.latitude" [longitude]="userMarker.longitude"></agm-marker>
 </agm-map>
