--- a/src/app/modules/search-restoration/search-restoration/search-restoration.component.html
+++ b/src/app/modules/search-restoration/search-restoration/search-restoration.component.html
@@ -1,4 +1,4 @@
-<button type="button" (click)="getUserAddress()">Me géocaliser</button>
+<button type="button" (click)="getUserCoordinates()">Me géocaliser</button>
 <form [formGroup]="addressForm" novalidate>
   <div class="form-group">
     <input type="text" id="address" name="address" class="form-control" autocapitalize="off" spellcheck="false" placeholder="Mon adresse" formControlName="addressControl" #address>
