Add and configure angularx-social-login package

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-search-restoration></app-search-restoration>
 <app-google-maps></app-google-maps>
+<app-authentication></app-authentication>
 
 <router-outlet></router-outlet>
