User authentication with the mean stack

--- a/src/app/pages/authentication/authentication.component.html
+++ b/src/app/pages/authentication/authentication.component.html
@@ -1,1 +1,1 @@
-<button (click)="signInWithGoogle()">Sign in with Google</button>
+<button (click)="signInWithGoogle()">Se connecter avec Google</button>
