Code review and add some unit tests

--- a/src/app/pages/authentication/authentication.component.html
+++ b/src/app/pages/authentication/authentication.component.html
@@ -1,1 +1,1 @@
-<button (click)="signInWithGoogle()">Se connecter avec Google</button>
+<button (click)="signIn()">Se connecter avec Google</button>
