Work In Progress: Display the list of restaurants located around the user

--- a/src/app/modules/search-restoration/search-restoration/search-restoration.component.html
+++ b/src/app/modules/search-restoration/search-restoration/search-restoration.component.html
@@ -4,3 +4,5 @@
     <input type="text" id="address" name="address" class="form-control" autocapitalize="off" spellcheck="false" placeholder="Mon adresse" formControlName="addressControl" #address>
   </div>
 </form>
+<button type="button" (click)="getRestaurantsCoordinates()">Chercher les restaurants</button>
+
