Continuation of the code review of the whole project

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,2 +1,2 @@
 <p>Bonjour {{ user.given_name + ' ' + user.family_name }}</p>
-<button (click)="signOut()">Se déconnecter</button>
+<button mat-button (click)="signOut()">Se déconnecter</button>
