--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,4 +1,2 @@
 <app-header></app-header>
-<app-search-restoration></app-search-restoration>
-<app-google-maps></app-google-maps>
-<app-results></app-results>
+<app-search-restaurant></app-search-restaurant>
