--- a/src/app/modules/search-restaurant/search-restaurant/search-restaurant.component.html
+++ b/src/app/modules/search-restaurant/search-restaurant/search-restaurant.component.html
@@ -1,8 +1,34 @@
-<button type="button" (click)="getUserCoordinates()">Me géocaliser</button>
+<button mat-button type="button" (click)="getUserCoordinates()">Me géocaliser</button>
 <form [formGroup]="addressForm" novalidate>
-  <div class="form-group">
-    <input type="text" id="address" name="address" class="form-control" autocapitalize="off" spellcheck="false" placeholder="Mon adresse" formControlName="addressControl" #address>
-  </div>
+  <mat-form-field>
+    <input matInput type="text" autocapitalize="off" spellcheck="false" placeholder="Mon adresse" formControlName="address" #address/>
+  </mat-form-field>
 </form>
-<button type="button" (click)="getRestaurantsCoordinates()">Chercher les restaurants</button>
+<button mat-button type="button" (click)="getRestaurantsCoordinates()">Chercher des restaurants</button>
 
+<agm-map *ngIf="userMarker === null" [latitude]="parisMarker.latitude" [longitude]="parisMarker.longitude">
+</agm-map>
+<agm-map *ngIf="userMarker !== null" [fitBounds]="true">
+  <agm-marker [latitude]="userMarker.latitude" [longitude]="userMarker.longitude" [agmFitBounds]="true"></agm-marker>
+  <agm-marker *ngFor="let restaurant of restaurants" [latitude]="restaurant.latitude" [longitude]="restaurant.longitude" [agmFitBounds]="true"></agm-marker>
+</agm-map>
+
+<p>Restaurants à proximité de vous :</p>
+<mat-card *ngFor="let restaurant of restaurants">
+  <mat-card-header>
+    <mat-card-title>ID : {{ restaurant.id }}</mat-card-title>
+    <mat-card-subtitle>Nom : {{ restaurant.name }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>Latitude : {{ restaurant.latitude }}</p>
+    <p>Longitude : {{ restaurant.longitude }}</p>
+    <p>Adresse : {{ restaurant.address }}</p>
+    <p *ngIf="restaurant.picture">Photographie : {{ restaurant.picture }}</p>
+    <p *ngIf="restaurant.isOpen">Actuellement ouvert : {{ restaurant.isOpen }}</p>
+    <p *ngIf="restaurant.rating">Note : {{ restaurant.rating }}</p>
+    <p *ngIf="restaurant.number_ratings">Nombre de notes : {{ restaurant.number_ratings }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="addOpinion(restaurant)">Ajouter un avis</button>
+  </mat-card-actions>
+</mat-card>
