--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.mat-button-focus-overlay {
+  background-color: transparent;
+}
+
+app-search-restaurant .mat-card-header-text {
+  margin: 0;
+}
