--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,2 +1,1 @@
-<app-header></app-header>
-<app-search-restaurant></app-search-restaurant>
+<app-main [module]="'app-search-restaurant'"></app-main>
