Add CSS styles for the home component page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<a [routerLink]="['/authentication']">Authentification</a>
+<div id="image">
+  <div id="container">
+    <mat-icon id="logo">restaurant</mat-icon>
+    <p id="title">Bienvenue</p>
+    <p id="message">Simplifiez-vous la vie en regroupant vos plats préférés, dans vos restaurants préférés ici.</p>
+    <a id="start" [routerLink]="['/authentication']"><button mat-button>Commencer</button></a>
+  </div>
+</div>
