--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div id="container">
     <mat-icon id="logo">restaurant</mat-icon>
     <p id="title">Bienvenue</p>
-    <p id="message">Simplifiez-vous la vie en regroupant vos plats préférés, dans vos restaurants préférés ici.</p>
+    <p id="message">Simplifiez-vous la vie en regroupant ici vos plats préférés, dans vos restaurants préférés.</p>
     <a id="start" [routerLink]="['/authentication']"><button mat-button>Commencer</button></a>
   </div>
 </div>
