--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,10 @@ html, body {
   background-color: transparent;
 }
 
+app-authentication .mat-card-header-text {
+  margin: 0 0 0 15px;
+}
+
 app-search-restaurant .mat-card-header-text {
   margin: 0;
 }
