--- a/src/app/modules/list-opinions/list-opinions/list-opinions.component.css
+++ b/src/app/modules/list-opinions/list-opinions/list-opinions.component.css
@@ -1,3 +1,67 @@
+.title {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Roboto', 'Helvetica Neue', 'sans-serif';
+}
+
+.vertically {
+  position: absolute;
+  top: calc(50% - 32px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .mat-card {
-  margin-bottom: 5px;
+  margin-bottom: 6px;
+  box-sizing: border-box;
+}
+
+.name {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(50, 117, 105);;
+}
+
+.icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 5px;
+  font-size: 16px;
+}
+
+.name .icon {
+  height: 22px;
+  width: 22px;
+  font-size: 22px;
+}
+
+.icon, .value {
+  vertical-align: middle;
+}
+
+.label {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 959px) {
+  .mat-card {
+    display: block;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .mat-card {
+    display: inline-block;
+    vertical-align: top;
+    width: calc(50% - 3px);
+  }
+
+  .mat-card:nth-child(2n) {
+    margin-right: 3px;
+  }
+
+  .mat-card:nth-child(2n + 1) {
+    margin-left: 3px;
+  }
 }
