--- a/src/app/modules/add-opinion/add-opinion/add-opinion.component.css
+++ b/src/app/modules/add-opinion/add-opinion/add-opinion.component.css
@@ -1,3 +1,62 @@
+#title {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Roboto', 'Helvetica Neue', 'sans-serif';
+  color: rgb(50, 117, 105);
+}
+
+.icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 5px;
+  font-size: 16px;
+}
+
+
+#title .icon {
+  height: 22px;
+  width: 22px;
+  font-size: 22px;
+}
+
+.icon, .text {
+  vertical-align: middle;
+}
+
+.right {
+  margin-left: 5px;
+  margin-right: 0;
+}
+
 .mat-form-field {
   width: 100%;
+}
+
+#buttons {
+  float: right;
+}
+
+#buttons button {
+  color: rgb(255, 255, 255);
+  background-color: rgb(50, 117, 105);
+}
+
+@media screen and (max-width: 959px) {
+  #buttons button {
+    margin: auto;
+  }
+
+  #buttons button:nth-child(1) {
+    margin-right: 2px;
+  }
+
+  #buttons button:nth-child(2) {
+    margin-left: 2px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  #buttons {
+    float: right;
+  }
 }
