--- a/src/app/modules/list-opinions/list-opinions/list-opinions.component.css
+++ b/src/app/modules/list-opinions/list-opinions/list-opinions.component.css
@@ -11,6 +11,13 @@
   transform: translate(-50%, -50%);
 }
 
+#container {
+  width: 100%;
+  padding: 0 12px;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .mat-card {
   margin-bottom: 6px;
   box-sizing: border-box;
